// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DsButtonV3 docs snippets > Default > MCP manifest snippet matches staged authoring rules 1`] = `
"const Default = () => <DsButtonV3
    onClick={fn()}
    color="default"
    variant="primary"
    size="medium"
    icon="check_circle">Button</DsButtonV3>;"
`;

exports[`DsButtonV3 docs snippets > Default > Show code panel matches staged authoring rules 1`] = `
"<DsButtonV3
  color="default"
  icon="check_circle"
  onClick={function RU(){}}
  size="medium"
  variant="primary"
>
  Button
</DsButtonV3>"
`;

exports[`DsButtonV3 docs snippets > Disabled > MCP manifest snippet matches staged authoring rules 1`] = `"const Disabled = () => <DsButtonV3 onClick={fn()} variant="primary" disabled />;"`;

exports[`DsButtonV3 docs snippets > Disabled > Show code panel matches staged authoring rules 1`] = `
"<DsButtonV3
  color="default"
  disabled
  icon="check_circle"
  onClick={function RU(){}}
  size="medium"
  variant="primary"
>
  Button
</DsButtonV3>"
`;

exports[`DsButtonV3 docs snippets > Icon Only > MCP manifest snippet matches staged authoring rules 1`] = `
"const IconOnly = () => <DsButtonV3
    onClick={fn()}
    color="default"
    size="medium"
    variant="primary"
    icon="check_circle"
    aria-label="Confirm" />;"
`;

exports[`DsButtonV3 docs snippets > Icon Only > Show code panel matches staged authoring rules 1`] = `
"<DsButtonV3
  aria-label="Confirm"
  color="default"
  icon="check_circle"
  onClick={function RU(){}}
  size="medium"
  variant="primary"
/>"
`;

exports[`DsButtonV3 docs snippets > Loading > MCP manifest snippet matches staged authoring rules 1`] = `"const Loading = () => <DsButtonV3 onClick={fn()} variant="primary" loading />;"`;

exports[`DsButtonV3 docs snippets > Loading > Show code panel matches staged authoring rules 1`] = `
"<DsButtonV3
  color="default"
  icon="check_circle"
  loading
  onClick={function RU(){}}
  size="medium"
  variant="primary"
>
  Button
</DsButtonV3>"
`;

exports[`DsButtonV3 docs snippets > On Dark > MCP manifest snippet matches staged authoring rules 1`] = `"const OnDark = () => <DsButtonV3 onClick={fn()} color="light" variant="primary" />;"`;

exports[`DsButtonV3 docs snippets > On Dark > Show code panel matches staged authoring rules 1`] = `
"<DsButtonV3
  color="light"
  icon="check_circle"
  onClick={function RU(){}}
  size="medium"
  variant="primary"
>
  Button
</DsButtonV3>"
`;

exports[`DsButtonV3 docs snippets > Responsive Size > MCP manifest snippet matches staged authoring rules 1`] = `
"const ResponsiveSize = () => (
    <DsStack direction="row" alignItems="center" gap="var(--sm)">
        <DsButtonV3 size={{ lg: 'large', md: 'small' }}>lg: large / md: small</DsButtonV3>
        <DsButtonV3 size={{ lg: 'medium', md: 'tiny' }}>lg: medium / md: tiny</DsButtonV3>
        <DsButtonV3 size="medium">static: medium</DsButtonV3>
    </DsStack>
);"
`;

exports[`DsButtonV3 docs snippets > Responsive Size > Show code panel matches staged authoring rules 1`] = `
"{
  render: () => <DsStack direction="row" alignItems="center" gap="var(--sm)">
            <DsButtonV3 size={{
      lg: 'large',
      md: 'small'
    }}>lg: large / md: small</DsButtonV3>
            <DsButtonV3 size={{
      lg: 'medium',
      md: 'tiny'
    }}>lg: medium / md: tiny</DsButtonV3>
            <DsButtonV3 size="medium">static: medium</DsButtonV3>
        </DsStack>
}"
`;

exports[`DsButtonV3 docs snippets > Selected > MCP manifest snippet matches staged authoring rules 1`] = `"const Selected = () => <DsButtonV3 onClick={fn()} variant="secondary" selected />;"`;

exports[`DsButtonV3 docs snippets > Selected > Show code panel matches staged authoring rules 1`] = `
"<DsButtonV3
  color="default"
  icon="check_circle"
  onClick={function RU(){}}
  selected
  size="medium"
  variant="secondary"
>
  Button
</DsButtonV3>"
`;
